# trailcaml

./: .gitignore  main.py  modal_app.py  pyproject.toml  tclit.py  trailcam_data_manager.py  trailcaml.py  trailcaml_demo.ipynb  trailcaml_inference.ipynb  trailcaml_training.ipynb
datasets/: __init__.py
datasets/trailcamera/: __init__.py  trailcamera_dataset.py
preprocessors/: __init__.py
